--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,8 @@ ALCHEMY_API_KEY=your_alchemy_api_key
 MONGODB_URI=mongodb://localhost:27017/klydo
 
 # Service Configuration
-NODE_ENV=development
 PORT=3001
 JSON_FEED_URL=https://gist.github.com/benbuschmann/18500244ac1e42dacf1d9bd5e88338cd/raw
 ADDRESS_POLL_INTERVAL_MINUTES=5
 TRANSACTION_INDEX_INTERVAL_MINUTES=10
-NODE_ENV = 'production'
+NODE_ENV=production
