--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
