--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "npx tsc && node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "npm install --no-save --production=false @types/node @types/express @types/cors"
   },
   "dependencies": {
     "alchemy-sdk": "^2.10.1",
